// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Process details page milestones panel Snapshot test with default props 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <article
        class="pf-c-card"
        data-ouia-component-id="OUIA-Generated-Card-1"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-c-card__header"
        >
          <h3
            class="pf-c-title pf-m-xl"
            data-ouia-component-id="OUIA-Generated-Title-1"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            Milestones
          </h3>
        </div>
        <div
          class="pf-c-card__body"
        >
          <div
            class="pf-c-content kogito-process-details--milestones__nameText"
          >
            <p
              class=""
              data-ouia-component-id="OUIA-Generated-Text-1"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Milestone 1: Order placed
               
              <span
                class="pf-c-label pf-m-blue"
              >
                <span
                  class="pf-c-label__content"
                >
                  <span
                    class="pf-c-label__icon"
                  />
                  Active
                </span>
              </span>
            </p>
            <p
              class=""
              data-ouia-component-id="OUIA-Generated-Text-2"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Milestone 2: Order shipped
               
              <span
                class="pf-c-label"
              >
                <span
                  class="pf-c-label__content"
                >
                  <span
                    class="pf-c-label__icon"
                  />
                  Available
                </span>
              </span>
            </p>
            <p
              class=""
              data-ouia-component-id="OUIA-Generated-Text-3"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              <span
                class="kogito-process-details--milestones__nameTextEllipses"
              >
                Milestone 3: Order delivered and closed with customer sign off
              </span>
               
              <span
                class="pf-c-label"
              >
                <span
                  class="pf-c-label__content"
                >
                  <span
                    class="pf-c-label__icon"
                  />
                  Available
                </span>
              </span>
            </p>
             
            <blockquote
              class=""
              data-ouia-component-id="OUIA-Generated-Text-4"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Manager decision
               
              <span
                class="pf-c-label pf-m-green"
              >
                <span
                  class="pf-c-label__content"
                >
                  <span
                    class="pf-c-label__icon"
                  />
                  Completed
                </span>
              </span>
            </blockquote>
          </div>
        </div>
      </article>
    </div>
  </body>,
  "container": <div>
    <article
      class="pf-c-card"
      data-ouia-component-id="OUIA-Generated-Card-1"
      data-ouia-component-type="PF4/Card"
      data-ouia-safe="true"
      id=""
    >
      <div
        class="pf-c-card__header"
      >
        <h3
          class="pf-c-title pf-m-xl"
          data-ouia-component-id="OUIA-Generated-Title-1"
          data-ouia-component-type="PF4/Title"
          data-ouia-safe="true"
        >
          Milestones
        </h3>
      </div>
      <div
        class="pf-c-card__body"
      >
        <div
          class="pf-c-content kogito-process-details--milestones__nameText"
        >
          <p
            class=""
            data-ouia-component-id="OUIA-Generated-Text-1"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Milestone 1: Order placed
             
            <span
              class="pf-c-label pf-m-blue"
            >
              <span
                class="pf-c-label__content"
              >
                <span
                  class="pf-c-label__icon"
                />
                Active
              </span>
            </span>
          </p>
          <p
            class=""
            data-ouia-component-id="OUIA-Generated-Text-2"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Milestone 2: Order shipped
             
            <span
              class="pf-c-label"
            >
              <span
                class="pf-c-label__content"
              >
                <span
                  class="pf-c-label__icon"
                />
                Available
              </span>
            </span>
          </p>
          <p
            class=""
            data-ouia-component-id="OUIA-Generated-Text-3"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <span
              class="kogito-process-details--milestones__nameTextEllipses"
            >
              Milestone 3: Order delivered and closed with customer sign off
            </span>
             
            <span
              class="pf-c-label"
            >
              <span
                class="pf-c-label__content"
              >
                <span
                  class="pf-c-label__icon"
                />
                Available
              </span>
            </span>
          </p>
           
          <blockquote
            class=""
            data-ouia-component-id="OUIA-Generated-Text-4"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Manager decision
             
            <span
              class="pf-c-label pf-m-green"
            >
              <span
                class="pf-c-label__content"
              >
                <span
                  class="pf-c-label__icon"
                />
                Completed
              </span>
            </span>
          </blockquote>
        </div>
      </div>
    </article>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Process details page milestones panel test assertions 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <article
        class="pf-c-card"
        data-ouia-component-id="OUIA-Generated-Card-2"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-c-card__header"
        >
          <h3
            class="pf-c-title pf-m-xl"
            data-ouia-component-id="OUIA-Generated-Title-2"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            Milestones
          </h3>
        </div>
        <div
          class="pf-c-card__body"
        >
          <div
            class="pf-c-content kogito-process-details--milestones__nameText"
          >
            <p
              class=""
              data-ouia-component-id="OUIA-Generated-Text-5"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Milestone 1: Order placed
               
              <span
                class="pf-c-label pf-m-blue"
              >
                <span
                  class="pf-c-label__content"
                >
                  <span
                    class="pf-c-label__icon"
                  />
                  Active
                </span>
              </span>
            </p>
            <p
              class=""
              data-ouia-component-id="OUIA-Generated-Text-6"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Milestone 2: Order shipped
               
              <span
                class="pf-c-label"
              >
                <span
                  class="pf-c-label__content"
                >
                  <span
                    class="pf-c-label__icon"
                  />
                  Available
                </span>
              </span>
            </p>
            <p
              class=""
              data-ouia-component-id="OUIA-Generated-Text-7"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Milestone 3: Order delivered
               
              <span
                class="pf-c-label"
              >
                <span
                  class="pf-c-label__content"
                >
                  <span
                    class="pf-c-label__icon"
                  />
                  Available
                </span>
              </span>
            </p>
            <p
              class=""
              data-ouia-component-id="OUIA-Generated-Text-8"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Milestone 2: Order shipped
               
              <span
                class="pf-c-label"
              >
                <span
                  class="pf-c-label__content"
                >
                  <span
                    class="pf-c-label__icon"
                  />
                  Available
                </span>
              </span>
            </p>
            <blockquote
              class=""
              data-ouia-component-id="OUIA-Generated-Text-9"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              <span
                class="kogito-process-details--milestones__nameTextEllipses"
              >
                Milestone 3: Order delivered and closed with customer sign off
              </span>
               
              <span
                class="pf-c-label pf-m-green"
              >
                <span
                  class="pf-c-label__content"
                >
                  <span
                    class="pf-c-label__icon"
                  />
                  Completed
                </span>
              </span>
            </blockquote>
             
            <p
              class=""
              data-ouia-component-id="OUIA-Generated-Text-10"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Milestone 2: Order shipped
               
            </p>
          </div>
        </div>
      </article>
    </div>
  </body>,
  "container": <div>
    <article
      class="pf-c-card"
      data-ouia-component-id="OUIA-Generated-Card-2"
      data-ouia-component-type="PF4/Card"
      data-ouia-safe="true"
      id=""
    >
      <div
        class="pf-c-card__header"
      >
        <h3
          class="pf-c-title pf-m-xl"
          data-ouia-component-id="OUIA-Generated-Title-2"
          data-ouia-component-type="PF4/Title"
          data-ouia-safe="true"
        >
          Milestones
        </h3>
      </div>
      <div
        class="pf-c-card__body"
      >
        <div
          class="pf-c-content kogito-process-details--milestones__nameText"
        >
          <p
            class=""
            data-ouia-component-id="OUIA-Generated-Text-5"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Milestone 1: Order placed
             
            <span
              class="pf-c-label pf-m-blue"
            >
              <span
                class="pf-c-label__content"
              >
                <span
                  class="pf-c-label__icon"
                />
                Active
              </span>
            </span>
          </p>
          <p
            class=""
            data-ouia-component-id="OUIA-Generated-Text-6"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Milestone 2: Order shipped
             
            <span
              class="pf-c-label"
            >
              <span
                class="pf-c-label__content"
              >
                <span
                  class="pf-c-label__icon"
                />
                Available
              </span>
            </span>
          </p>
          <p
            class=""
            data-ouia-component-id="OUIA-Generated-Text-7"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Milestone 3: Order delivered
             
            <span
              class="pf-c-label"
            >
              <span
                class="pf-c-label__content"
              >
                <span
                  class="pf-c-label__icon"
                />
                Available
              </span>
            </span>
          </p>
          <p
            class=""
            data-ouia-component-id="OUIA-Generated-Text-8"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Milestone 2: Order shipped
             
            <span
              class="pf-c-label"
            >
              <span
                class="pf-c-label__content"
              >
                <span
                  class="pf-c-label__icon"
                />
                Available
              </span>
            </span>
          </p>
          <blockquote
            class=""
            data-ouia-component-id="OUIA-Generated-Text-9"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <span
              class="kogito-process-details--milestones__nameTextEllipses"
            >
              Milestone 3: Order delivered and closed with customer sign off
            </span>
             
            <span
              class="pf-c-label pf-m-green"
            >
              <span
                class="pf-c-label__content"
              >
                <span
                  class="pf-c-label__icon"
                />
                Completed
              </span>
            </span>
          </blockquote>
           
          <p
            class=""
            data-ouia-component-id="OUIA-Generated-Text-10"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Milestone 2: Order shipped
             
          </p>
        </div>
      </div>
    </article>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
